--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -306,20 +306,21 @@ Let $\opFT$ be the Fourier Transform operator \xref{def:opFT}.
 \end{array}}
 \end{theorem}
 \begin{proof}
+Let $\opLT$ be the \ope{Laplace Transform} operator\ifsxref{laplace}{def:opLT}.
 \begin{align*}
   \opFT \brs{\ff(x-y)}(\omega)
     &= \brlr{\opLT \brs{\ff(x-y)}(s)}_{s=i\omega}
-    && \text{by definition of $\opLT$}         && \text{\xref{def:opLT}}
+    && \text{by definition of $\opLT$}         && \text{\ifxref{laplace}{def:opLT}}
   \\&= \brlr{e^{-sy} \;\brs{\opLT \ff(x)}(s)}_{s=i\omega}
-    && \text{by \thme{Laplace shift relation}} && \text{\xref{thm:opLT_shift}}
+    && \text{by \thme{Laplace shift relation}} && \text{\ifxref{laplace}{thm:opLT_shift}}
   \\&= e^{-i\omega y} \;\brs{\opFT \ff(x)}(\omega)
     && \text{by definition of $\opFT$}         && \text{\xref{def:opFT}}
   \\
   \brs{\opFT\brp{e^{irx} \fg(x)}}(\omega)
     &= \brlr{\brs{\opLT\brp{e^{irx} \fg(x)}}(s)}_{s=i\omega}
-    && \text{by definition of $\opLT$}         && \text{\xref{def:opLT}}
+    && \text{by definition of $\opLT$}         && \text{\ifxref{laplace}{def:opLT}}
   \\&= \brlr{\brs{\brs{\opLT\fg(x)}(s-r)}}_{s=i\omega}
-    && \text{by \thme{Laplace shift relation}} && \text{\xref{thm:opLT_shift}}
+    && \text{by \thme{Laplace shift relation}} && \text{\ifxref{laplace}{thm:opLT_shift}}
   \\&= \brs{\opFT\fg(x)}(\omega-r)
     && \text{by definition of $\opFT$}         && \text{\xref{def:opFT}}
 \end{align*}
@@ -411,12 +412,12 @@ and $\conv$ the convolution operator \xref{def:conv}.
 \end{array}
 }
 \end{theorem}
-
 \begin{proof}
+Let $\opLT$ be the \ope{Laplace Transform} operator\ifsxref{laplace}{def:opLT}.
 \begin{align*}
    \opFT \brs{\ff(x)\conv\fg(x)}(\omega)
      &= \brlr{\opLT \brs{\ff(x)\conv\fg(x)}(s)}_{s=i\omega}
-     && \text{by definition of $\opLT$} && \text{\xref{def:opLT}}
+     && \text{by definition of $\opLT$} && \text{\ifxref{laplace}{def:opLT}}
    \\&= \brlr{\sqrt{2\pi}\brs{\opLT\ff}(s)\, \brs{\opLT\fg}(s)}_{s=i\omega}
      && \text{by \thme{Laplace convolution} result} && \text{\xref{thm:opLT_conv}}
    \\&= \sqrt{2\pi}\brs{\opFT\ff}(\omega)\, \brs{\opFT\fg}(\omega)
@@ -442,10 +443,11 @@ Let $\opFT$ be the \ope{Fourier Transform} operator \xref{def:opFT}.
   }
 \end{theorem}
 \begin{proof}
+Let $\opLT$ be the \ope{Laplace Transform} operator\ifsxref{laplace}{def:opLT}.
 \begin{align*}
   \opFT \brs{\ddt \fx(t)}
     &\eqd \brlr{\opLT\brs{\ddt \fx(t)}(s)}_{s=i\omega}
-    && \text{by definitions of $\opLT$ and $\opFT$}    && \text{\xref{def:opLT}}
+    && \text{by definitions of $\opLT$ and $\opFT$}    && \text{\ifxref{laplace}{def:opLT}}
   \\&= \brlr{s \brs{\opLT\fx(t)}(s)}_{s=i\omega}
     && \text{by \prefp{thm:opLT_diff}}
   \\&= i\omega \brs{\opFT\fx}(\omega)
@@ -460,6 +462,7 @@ Let $\opFT$ be the \ope{Fourier Transform} operator \xref{def:opFT}.
     \opFT \int_{u=-\infty}^{u=t} \fx(u) \du = \frac{1}{i\omega} \brs{\opFT\fx}(\omega)
   }
 \end{theorem}
+Let $\opLT$ be the \ope{Laplace Transform} operator\ifsxref{laplace}{def:opLT}.
 \begin{proof}
 \begin{align*}
   \opFT \int_{u=-\infty}^{u=t} \fx(u) \du
