fs.tex: edits. fix Carleson(2001) quote and expand displayed portion of quote

--- a/common/bib/mathhist.bib
+++ b/common/bib/mathhist.bib
@@ -160,7 +160,8 @@
   pages        = {455--461},
   isbn         = {978-3-540-66913-5},
   isbn10       = {3540669132},
-  url          = {http://books.google.com/books?vid=ISBN3540669132},
+  url          = {https://link.springer.com/chapter/10.1007/978-3-642-56478-9_22},
+  urlg         = {http://books.google.com/books?vid=ISBN3540669132},
   urlw         = {http://www.worldcat.org/isbn/3540669132},
   urla         = {http://www.amazon.com/dp/3540669132},
   } 
