--- a/common/sty/fonts.sty
+++ b/common/sty/fonts.sty
@@ -639,6 +639,7 @@
    ItalicFont     = {*-mediumitalic},
    BoldItalicFont = {*-mediumitalic},
    Ligatures      = {NoCommon},
+   Scale          = 1.25,
    ]{texgyrechorus}
 
 %----------------------------------------------------------------------------
@@ -1271,61 +1272,16 @@
 \newcommand{\fntZapf}    {\fntChorus}            % poem font
 \newcommand{\fntFreeSerif}{\fntgnuFreeSerif}%
 \newcommand{\fntzhr}{\fntzht}%
-
-%20180122%% \newcommand{\fntrm}      {\fntPagella}          % Roman font
-%20180122%%\newcommand{\fntrm}      {\fntFreeSerif}          % Roman font
-%20180122%% \newcommand{\fntss}      {\fntHeros}            % Sans-Serif font
-%20180122%%\newcommand{\fntmono}    {\fntUMtypewriter}     % mono-spaced font
-%20180122%% \newcommand{\fntmono}    {\fntFreeMono}     % mono-spaced font
-%20180122%% \newcommand{\fntcmd}     {\fntFreeMono}     % computer command
-%20180122%% \newcommand{\cmpcmd}[1]{{\fntcmd #1}}
-%20180122%
-%20180122% \newcommand{\fnttrace}   {\fntPrintDashed}      % trace font for teaching printing to beginners
-%20180122% \newcommand{\fntsimple}  {\fntSimple}           % simple font for teaching English to beginners
 \newcommand{\fnthw}      {\fntLavi}            % handwriting font
-%20180122% \newcommand{\fntprv}      {\fntLavi}            % font for proverbs
-%20180122%%\newcommand{\fnthw}      {\fntAugie}            % handwriting font
-%20180122%% \newcommand{\fnthw}      {\itshape}            % handwriting font
-%20180122%% \newcommand{\fntquote}   {\fntAugie}            % quote font
 \newcommand{\fntquote}   {\fntZapf}            % quote font
 \newcommand{\fntpoem}    {\fntZapf}            % poem font
-%20180122%
-%20180122%
-%20180122% \newcommand{\fntarabic}  {\fntScheherazade}     % Arabic
-%\newcommand{\fntdingbats}{\fntDingbatsURW}      % Dingbats
 \newcommand{\fntdingbats}{\fntDingbatsErler}      % Dingbats
-%20180122%%\newcommand{\fntgreek}   {\fntGentiumPlus}      % Greek font
 \newcommand{\fntagreek}  {\fntFreeSerif\addfontfeatures{Mapping=/dan/r/common/teckit/asciitogreek}}      % Greek font
-%20180122% \newcommand{\fnthebrew}  {\fntLibertineR}       % Hebrew font
-%20180122%%\newcommand{\fnthieroglyphs}{\fntAegyptus}      % Egyptian Hieroglyphs
-%20180122% \newcommand{\fnthieroglyphs}{\fntNotoSansEgyp}  % Egyptian Hieroglyphs
-%20180122%%\newcommand{\fntipa}     {\fntIPAss}            % IPA font
-%20180122% \newcommand{\fntipa}     {\fntFreeSans\addfontfeatures{Mapping=/dan/r/common/teckit/ascii-uipa}}        % IPA font
-%20180122% \newcommand{\fntDigital} {\fntLiquidCrystal}    % digital font
 \newcommand{\fntDigital} {\fntLiquidCrystal}    % digital font
-%20180122% \newcommand{\fntsymbol}  {\fntSymbolURW}        % symbol font
-%20180122% \newcommand{\fnttagalog} {\fntTagStyle}         % Tagalog
-%20180122%%\newcommand{\fntzhs}     {\fntFirefly\addfontfeatures{Mapping=../common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
 \newcommand{\fntzhs}     {\fntNotoSansCJKsc\addfontfeatures{Mapping=/dan/r/common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
 \newcommand{\fntzhsSerif}{\fntNotoSerifCJKsc\addfontfeatures{Mapping=/dan/r/common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
-%20180122%
-%\newcommand{\fntzht}     {}
 \newcommand{\fntzht}     {\fntNotoSansCJK}
 \newcommand{\fntzhtSerif}{\fntNotoSerifCJK}
-%20180122% \newcommand{\fntzhtr}    {\fntWangClearZY}      % Chinese traditional with Ruby text
-%20180122%
-%20180122%  \ifthenelse{\boolean{zhs}}
-%20180122%    {% use simplified Chinese characters
-%20180122%      \newcommand{\fntzh}      {\fntNotoSansCJK\addfontfeatures{Mapping=../common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
-%20180122%      \newcommand{\fntzhhw}    {\fntUKai\addfontfeatures{Mapping=../common/teckit/zht2zhs}}             % handwriting Chinese traditional and simplified 
-%20180122%      \newcommand{\fntzhr}     {\fntNotoSansCJK\addfontfeatures{Mapping=../common/teckit/zht2zhs}}        % normal Chinese traditional
-%20180122%     %\newcommand{\fntzhr}     {\fntFirefly       \addfontfeatures{Mapping=../common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
-%20180122%    }%
-%20180122%    {% use traditional Chinese characters
-%20180122%      \newcommand{\fntzh}      {\fntNotoSansCJK}
-%20180122%      \newcommand{\fntzhhw}    {\fntUKai}             % handwriting Chinese traditional and simplified 
-%20180122%      \newcommand{\fntzhr}     {\fntWangClearZY}      % Chinese traditional with Ruby text
-%20180122%    }%
 
 %----------------------------------------------------------------------------
 % Commands
@@ -1345,24 +1301,14 @@
 %--------------------------------------
 % Symbols
 %--------------------------------------
-%\newcommand{\trademark}{{\fntsymbol\symbol{"00E4}}}%    unregistered trademark: TM
-%\newcommand{\rtrademark}{{\fntsymbol\symbol{"00E2}}}%   registered trademark: circled R
-%\newcommand{\copyright}{{\fntsymbol\symbol{"00E3}}}%    copyright mark: circled C
-% \newcommand{\trademark}{{\fntsymbol\symbol{"10009}}}%    unregistered trademark: TM
-% \newcommand{\rtrademark}{{\fntsymbol\symbol{"10007}}}%   registered trademark: circled R
-
-% \newcommand{\trademark}{{\fntsymbol\symbol{65545}}}%    unregistered trademark: TM
  \newcommand{\rtrademark}{\symbol{"00AE}}%   registered trademark: circled R
  \newcommand{\puttrademark}{\raisebox{0.5ex}{{\rtrademark}}}% place registered trademark
-
  \newcommand{\pencilTipDown}{{\fntdingbats\symbol{"270E}}}% pencil with tip down---used to start proof environment
  \newcommand{\pencilFlat}   {{\fntdingbats\symbol{"270F}}}% pencil lying flat   ---used to end   proof environment
  \newcommand{\squoteo}{{\fntdingbats\symbol{"275B}}}%  large opening single quote
  \newcommand{\squotec}{{\fntdingbats\symbol{"275C}}}%  large closing single quote
  \newcommand{\quoteo}{{\fntdingbats\symbol{"275D}}}%  large opening double quote
  \newcommand{\quotec}{{\fntdingbats\symbol{"275E}}}%  large closing double quote
-%\newcommand{\quoteo} [0]{\ding{125}}
-%\newcommand{\quotec} [0]{\ding{126}}
 
 %--------------------------------------
 % IPA
