--- a/common/fs.tex
+++ b/common/fs.tex
@@ -9,13 +9,13 @@
 %=======================================
 \qboxnpqt
   {
-    A competition awards committee consisting of the 
-    mathematical giants 
-    \href{http://en.wikipedia.org/wiki/Joseph_Louis_Lagrange}{Lagrange}, 
-    \href{http://en.wikipedia.org/wiki/Laplace}{Laplace}, 
+    A competition awards committee consisting of the
+    mathematical giants
+    \href{http://en.wikipedia.org/wiki/Joseph_Louis_Lagrange}{Lagrange},
+    \href{http://en.wikipedia.org/wiki/Laplace}{Laplace},
     \href{http://en.wikipedia.org/wiki/Legendre}{Legendre}, and others,
-    commenting on 
-    \href{http://en.wikipedia.org/wiki/Joseph_Fourier}{Fourier's} 
+    commenting on
+    \href{http://en.wikipedia.org/wiki/Joseph_Fourier}{Fourier's}
     \href{http://en.wikipedia.org/wiki/1807}{1807} landmark paper
     \href{http://gallica.bnf.fr/ark:/12148/bpt6k33707/f220n7}
           {\hie{Dissertation on the propagation of heat in solid bodies}}
@@ -23,20 +23,20 @@
     \footnotemark
   }
   {../common/people/fourier1807z.jpg}
-  %{ \ldots et la nouveaut\'e du sujet, jointe \`a son importance, 
-  { \ldots et la nouveaut\'e de l'objet, jointe \`a son importance, 
-    a d\'etermin\'e la classe \`a couronner cet ouvrage, 
-    en observant cependant que la mani\`ere dont l`auteur parvient 
-    \`a ses \'equations n`est pas exempte de difficult\'es, et que son analyse, 
-    pour les int\'egrer, laisse encore quelque chose \`a d\'esirer, 
+  %{ \ldots et la nouveaut\'e du sujet, jointe \`a son importance,
+  { \ldots et la nouveaut\'e de l'objet, jointe \`a son importance,
+    a d\'etermin\'e la classe \`a couronner cet ouvrage,
+    en observant cependant que la mani\`ere dont l`auteur parvient
+    \`a ses \'equations n`est pas exempte de difficult\'es, et que son analyse,
+    pour les int\'egrer, laisse encore quelque chose \`a d\'esirer,
     soit relativement \`a la g\'en\'eralit\'e, soit m\^eme du cot\'e de la rigueur.}
-  { \ldots and the innovation of the subject, 
-    together with its importance, 
+  { \ldots and the innovation of the subject,
+    together with its importance,
     convinced the committee to crown this work.
-    %By observing however that the way in which the author [Fourier] arrives at his equations 
-    By observing however that the way in which the author arrives at his equations 
-    is not free from difficulties, and the analysis of which, 
-    to integrate them, still leaves something to be desired, 
+    %By observing however that the way in which the author [Fourier] arrives at his equations
+    By observing however that the way in which the author arrives at his equations
+    is not free from difficulties, and the analysis of which,
+    to integrate them, still leaves something to be desired,
     either relative to generality, or even on the side of rigour.}
   \footnotetext{\begin{tabular}[t]{lp{\tw-31mm}}
 %   quote:       & \url{http://www.todayinsci.com/F/Fourier_JBJ/fourglos.htm#commenx} \\
@@ -57,7 +57,7 @@
 %=======================================
 \section{Definition}
 %=======================================
-The \ope{Fourier Series} expansion of a periodic function 
+The \ope{Fourier Series} expansion of a periodic function
 is simply a complex trigonometric polynomial.
 In the special case that the periodic function is even,
 then the Fourier Series expansion is a cosine polynomial.
@@ -68,20 +68,18 @@ then the Fourier Series expansion is a cosine polynomial.
   \citerpg{katznelson2004}{3}{0521543592}
   }
 \label{def:fs}
-\label{def:opFS} 
+\label{def:opFS}
 %--------------------------------------
 \defbox{\begin{array}{M}\indxs{\opFS}
   The \opd{Fourier Series operator} $\opFS:\spLLR\to\spllR$ is defined as
   \\\indentx$\ds
-    \brs{\opFS \ff}(n) 
-    \eqd 
+    \brs{\opFS \ff}(n)
+    \eqd
     \fsscale \int_0^\tau \ff(x) \fkernea{x}{\frac{2\pi}{\tau}n} \dx
     \qquad\forall\ff\in\set{\ff\in\spLLR}{\text{$\ff$ is periodic with period $\tau$}}
   $
 \end{array}}
 \end{definition}
-
-
 
 %=======================================
 \section{Inverse Fourier Series operator}
@@ -101,11 +99,11 @@ Let $\opFS$ be the Fourier Series operator.
 \end{theorem}
 \begin{proof}
 The proof of the pointwise convergence of the Fourier Series is notoriously difficult.
-It was conjectured in 1913 by Nokolai Luzin that the Fourier Series for all square summable periodic functions 
+It was conjectured in 1913 by Nokolai Luzin that the Fourier Series for all square summable periodic functions
 are pointwise convergent:
 \citePbullet\quad\fullcite{luzin1913}
 
-Fifty-three years later (1966) at a conference in Moscow, Lennart Axel Edvard Carleson presented one of the most spectacular 
+Fifty-three years later (1966) at a conference in Moscow, Lennart Axel Edvard Carleson presented one of the most spectacular
 results ever in mathematics; he demonstrated that the Luzin conjecture is indeed correct.
 Carleson formally published his result that same year:
 \citePbullet\quad\fullcite{carleson1966}
@@ -115,78 +113,84 @@ Carleson's proof is expounded upon in Reyna's (2002) 175 page book:
 
 Interestingly enough, Carleson started out trying to disprove Luzin's conjecture.
 Carleson said this in an interview published in 2001:\footnote{
-  \citer{carleson2001},
-  \url{http://www.gap-system.org/~history/Biographies/Carleson.html}
+  \citer{carleson2001}
   }
-\\
-``\ldots the problem of course presents itself already when you are a student and I was thinking about the problem on and off, 
-  but the situation was more interesting than that. 
-  The great authority in those days was Zygmund and he was completely convinced that what one should produce was not a proof 
-  but a counter-example. 
-  When I was a young student in the United States, 
-  I met Zygmund and I had an idea how to produce some very complicated functions for a counter-example 
-  and Zygmund encouraged me very much to do so. 
-  I was thinking about it for about 15 years on and off, on how to make these counter-examples work 
-  and the interesting thing that happened was that I realised why there should be a counter-example and how you should produce it. 
-  I thought I really understood what was the background and then to my amazement I could prove that 
-  this ``correct" counter-example couldn't exist and I suddenly realised that what you should try to do was the opposite, 
-  you should try to prove what was not fashionable, namely to prove convergence. 
-  The most important aspect in solving a mathematical problem is the conviction of what is the true result. 
-  Then it took 2 or 3 years using the techniques that had been developed during the past 20 years or so."
+\quotetext{%
+  Well, the problem of course presents itself already when you are a student
+  and I was thinking of the problem on and off,
+  but the situation was more interesting than that.
+  The great authority in those days was Zygmund and he was completely convinced
+  that what one should produce was not a proof but a counter-example.
+  When I was a young student in the United States,
+  I met Zygmund and I had an idea how to  produce some very complicated functions for a counter-example
+  and Zygmund encouraged me very much to do so.
+  I was thinking about it for about 15 years on and off,
+  on how to make these counter-examples work and the interesting thing that happened
+  was that I suddenly realized why there should be a counter-example and how you should produce it.
+  I thought I really understood what was the background and then to my amazement I could prove that this
+  ``correct" counter-example couldn't exist and therefore I suddenly realized that what you should try to do was the opposite,
+  you should try to prove what was not fashionable, namely to prove convergence.
+  The most important aspect in solving a mathematical problem is the conviction of what is the true result!
+  Then it took like 2 or 3 years using the technique that had been developed during the past 20 years or so.
+  It is actually a problem related to analytic functions basically even though it doesn't look that way.%
+  }
 
-For now, if you just want some intuitive justification for the Fourier Series, 
-and you can somehow imagine that the Dirichlet kernel generates a \hie{comb function} of \hie{Dirac delta} functions,
-then perhaps what follows may help (or not). It is certainly not mathematically rigorous and is by 
+For now, if you just want some intuitive justification for the Fourier Series,
+and you can somehow imagine that the Dirichlet kernel generates a \fncte{comb function} of \fncte{Dirac delta} functions,
+then perhaps what follows may help (or not). It is certainly not mathematically rigorous and is by
 no means a real proof (but at least it is less than 175 pages).
 
 \begin{align*}
-     \left[\opFSi \opFS \fx\right](x)
-       &=    \opFSi \mcom{\left[\fsscale \int_0^\tau \fx(x) \fkernea{x}{\frac{2\pi}{\tau}n} \dx\right]}
+     \brs{\opFSi \opFS \fx}(x)
+       &=    \opFSi \mcom{\brs{\fsscale \int_0^\tau \fx(x) \fkernea{x}{\frac{2\pi}{\tau}n} \dx}}
                          {$\opFS \fx$}
-       &&    \text{by definition of $\opFS$ \prefp{def:fs}}
-     \\&=    \fsscalei \sum_{n\in\Z} \left[\fsscale\int_0^\tau \fx(u) \fkernea{u}{\frac{2\pi}{\tau}n} \du \right] 
+       &&    \text{by definition of $\opFS$}
+       &&    \text{\xref{def:fs}}
+     \\&=    \fsscalei \sum_{n\in\Z} \brs{\fsscale\int_0^\tau \fx(u) \fkernea{u}{\frac{2\pi}{\tau}n} \du }
              \fkerne{x}{\frac{2\pi}{\tau}n}
        &&    \text{by definition of $\opFSi$}
-     \\&=    \fsscalei \sum_{n\in\Z} \fsscale\int_0^\tau \fx(u) \fkernea{u}{\frac{2\pi}{\tau}n} \fkerne{x}{\frac{2\pi}{\tau}n}\du  
-     \\&=    \fsscalei \sum_{n\in\Z} \fsscale\int_0^\tau \fx(u) \fkerne{(x-u)}{\frac{2\pi}{\tau}n} \du  
-     \\&=    \int_0^\tau \fx(u) 
+     \\&=    \fsscalei \sum_{n\in\Z} \fsscale\int_0^\tau \fx(u) \fkernea{u}{\frac{2\pi}{\tau}n} \fkerne{x}{\frac{2\pi}{\tau}n}\du
+     \\&=    \fsscalei \sum_{n\in\Z} \fsscale\int_0^\tau \fx(u) \fkerne{(x-u)}{\frac{2\pi}{\tau}n} \du
+     \\&=    \int_0^\tau \fx(u)
              \mcom{\frac{1}{\tau}\sum_{n\in\Z} \fkerne{(x-u)}{\frac{2\pi}{\tau}n}}
-                  {$\lim_{N\to\infty}\Dn(x)$} 
-             \du  
-     \\&=    \int_0^\tau \fx(u) \left[\sum_{n\in\Z} \delta(x-u-n\tau)\right] \du  
+                  {$\lim_{N\to\infty}\Dn(x)$}
+             \du
+     \\&=    \int_0^\tau \fx(u) \brs{\sum_{n\in\Z} \delta(x-u-n\tau)} \du
        %&&    \text{by \prefp{prop:dkernel}}
-     \\&=    \sum_{n\in\Z} \int_{u=0}^{u=\tau} \fx(u) \delta(x-u-n\tau)\du  
-     \\&=    \sum_{n\in\Z} \int_{v-n\tau=0}^{v-n\tau=\tau} \fx(v-n\tau) \delta(x-v)\dv  
+     \\&=    \sum_{n\in\Z} \int_{u=0}^{u=\tau} \fx(u) \delta(x-u-n\tau)\du
+     \\&=    \sum_{n\in\Z} \int_{v-n\tau=0}^{v-n\tau=\tau} \fx(v-n\tau) \delta(x-v)\dv
        &&    \text{where $v\eqd u+n\tau$}
-     \\&=    \sum_{n\in\Z} \int_{v=n\tau}^{v=(n+1)\tau} \fx(v-n\tau) \delta(x-v)\dv  
+     \\&=    \sum_{n\in\Z} \int_{v=n\tau}^{v=(n+1)\tau} \fx(v-n\tau) \delta(x-v)\dv
        &&    \text{where $v\eqd u+n\tau$}
-     \\&=    \sum_{n\in\Z} \int_{v=n\tau}^{v=(n+1)\tau} \fx(v) \delta(x-v)\dv  
+     \\&=    \sum_{n\in\Z} \int_{v=n\tau}^{v=(n+1)\tau} \fx(v) \delta(x-v)\dv
        &&    \text{because $\fx$ is periodic with period $\tau$}
-     \\&=    \int_{\R} \fx(v) \delta(x-v)\dv  
-     \\&=    \fx(x) 
+     \\&=    \int_{\R} \fx(v) \delta(x-v)\dv
+     \\&=    \fx(x)
      \\&=    \opI \Fx(n)
-       &&    \text{by definition of $\opI$ \ifdochas{operator}{(\prefp{def:opI})}} 
+       &&    \text{by definition of $\opI$}
+       &&    \text{\ifxref{operator}{def:opI}}
      \\
      \\
-     \left[\opFS \opFSi \Fx\right](n)
-       &=    \opFS \left[ \fsscalei\sum_{k\in\Z} \Fx(k) \fkerne{x}{\frac{2\pi}{\tau}k}  \right]
+     \brs{\opFS \opFSi \Fx}(n)
+       &=    \opFS \brs{ \fsscalei\sum_{k\in\Z} \Fx(k) \fkerne{x}{\frac{2\pi}{\tau}k}  }
        &&    \text{by definition of $\opFSi$}
-     \\&=    \fsscale\int_0^\tau \left[ \fsscalei\sum_{k\in\Z} \Fx(k) \fkerne{x}{\frac{2\pi}{\tau}k}  \right] \fkernea{x}{\frac{2\pi}{\tau}n} \dx
-       &&    \text{by definition of $\opFS$ (\prefp{def:fs})}
-     \\&=    \frac{1}{\tau} \int_0^\tau \left[ \sum_{k\in\Z} \Fx(k) \fkerne{x}{\frac{2\pi}{\tau}(k-n)}  \right]  \dx
-     \\&=    \sum_{k\in\Z} \Fx(k) \left[ \frac{1}{\tau}  \int_0^\tau \fkerne{x}{\frac{2\pi}{\tau}(k-n)} \dx \right]  
-     \\&=    \sum_{k\in\Z} \Fx(k) \frac{1}{\tau} \left[  \frac{1}{i\frac{2\pi}{\tau}(k-n)}  \fkerne{x}{\frac{2\pi}{\tau}(k-n)}\right]_0^\tau  
-     \\&=    \sum_{k\in\Z} \Fx(k) \frac{1}{i2\pi(k-n)}\left[ \fkerne{}{2\pi(k-n)}-1  \right]  
-     \\&=    \sum_{k\in\Z} \Fx(k) \, \kdelta(k-n)\, \lim_{x\to0}\left[\frac{\fkerne{}{2\pi x}-1 }{i2\pi x}\right]
+     \\&=    \fsscale\int_0^\tau \brs{ \fsscalei\sum_{k\in\Z} \Fx(k) \fkerne{x}{\frac{2\pi}{\tau}k}  } \fkernea{x}{\frac{2\pi}{\tau}n} \dx
+       &&    \text{by definition of $\opFS$}
+       &&    \text{\xref{def:fs}}
+     \\&=    \frac{1}{\tau} \int_0^\tau \brs{ \sum_{k\in\Z} \Fx(k) \fkerne{x}{\frac{2\pi}{\tau}(k-n)}  }  \dx
+     \\&=    \sum_{k\in\Z} \Fx(k) \brs{ \frac{1}{\tau}  \int_0^\tau \fkerne{x}{\frac{2\pi}{\tau}(k-n)} \dx }
+     \\&=    \sum_{k\in\Z} \Fx(k) \frac{1}{\tau} \brs{  \frac{1}{i\frac{2\pi}{\tau}(k-n)}  \fkerne{x}{\frac{2\pi}{\tau}(k-n)}}_0^\tau
+     \\&=    \sum_{k\in\Z} \Fx(k) \frac{1}{i2\pi(k-n)}\brs{ \fkerne{}{2\pi(k-n)}-1  }
+     \\&=    \sum_{k\in\Z} \Fx(k) \, \kdelta(k-n)\, \lim_{x\to0}\brs{\frac{\fkerne{}{2\pi x}-1 }{i2\pi x}}
      \\&=    \Fx(n) \, \left.\frac{\opddx\left(\fkerne{}{2\pi x}-1\right) }{\opddx(i2\pi x)}\right|_{x=0}
        &&    \text{by \thme{l'H{/<o}pital's rule}}
      \\&=    \Fx(n) \left.\frac{i2\pi\fkerne{}{2\pi x}}{i2\pi }\right|_{x=0}
-     \\&=    \Fx(n) 
+     \\&=    \Fx(n)
      \\&=    \opI \Fx(n)
-       &&    \text{by definition of $\opI$ \ifdochas{operator}{(\prefp{def:opI})}} 
+       &&    \text{by definition of $\opI$}
+       &&    \text{\ifxref{operator}{def:opI}}
 \end{align*}
 \end{proof}
-
 
 %--------------------------------------
 \begin{theorem}
@@ -201,28 +205,30 @@ no means a real proof (but at least it is less than 175 pages).
 \begin{align*}
   \inprod{ \opFS \fx(x) }{ \Fy(n) }_{\Z}
     &= \inprod{ \fsscale \int_0^\tau \fx(x) \fkernea{x}{\frac{2\pi}{\tau}n} \dx }{ \Fy(n) }_{\Z}
-    && \text{by definition of $\opFS$ \prefp{def:fs}}
+    && \text{by definition of $\opFS$}
+    && \text{\xref{def:fs}}
   \\&= \fsscale \int_0^\tau \fx(x) \inprod{ \fkernea{x}{\frac{2\pi}{\tau}n} }{ \Fy(n) }_{\Z}  \dx
-    && \text{by additivity property of $\inprodn$ \ifdochas{vsinprod}{\prefpo{def:inprod}}}
+    && \text{by additivity property of $\inprodn$}
+    && \text{\ifxref{vsinprod}{def:inprod}}
   \\&= \int_0^\tau \fx(x) \fsscale \inprod{ \Fy(n) }{ \fkernea{x}{\frac{2\pi}{\tau}n} }_{\Z}^\ast  \dx
-    && \text{by property of $\inprodn$ \ifdochas{vsinprod}{\prefpo{def:inprod}}}
-  \\&= \int_0^\tau \fx(x) \left[\opFSi\Fy(n)\right]^\ast  \dx
-    && \text{by definition of $\opFSi$ \prefpo{thm:opFSi}}
+    && \text{by property of $\inprodn$}
+    && \text{\ifxref{vsinprod}{def:inprod}}
+  \\&= \int_0^\tau \fx(x) \brs{\opFSi\Fy(n)}^\ast  \dx
+    && \text{by definition of $\opFSi$}
+    && \text{\xref{thm:opFSi}}
   \\&= \inprod{\fx(x)}{\mcom{\opFSi}{$\opFSa$}\Fy(n)}_{\R}
 \end{align*}
 \end{proof}
 
-
-
-The Fourier Series operator has several nice properties: 
+The Fourier Series operator has several nice properties:
 \begin{liste}
-  \item $\opFS$ is \hie{unitary} 
+  \item $\opFS$ is \prope{unitary}
     \ifdochas{operator}{\footnote{{\em unitary operators}: \prefp{def:op_unitary}}}
     (\prefp{cor:fs_unitary}).
-  \item Because $\opFS$ is unitary, it automatically has several other nice 
-        properties such as being \hie{isometric}, and satisfying 
-        \hie{Parseval's equation}, satisfying \hie{Plancheral's formula}, and more
-        (\prefp{cor:fs_prop}).
+  \item Because $\opFS$ is unitary, it automatically has several other nice
+        properties such as being \prope{isometric}, and satisfying
+        \fncte{Parseval's equation}, satisfying \fncte{Plancheral's formula}, and more
+        \xref{cor:fs_prop}.
 \end{liste}
 
 %---------------------------------------
@@ -234,12 +240,15 @@ Let $\opI$ be the identity operator
 and let $\opFS$ be the Fourier Series operator with
 adjoint $\opFSa$.
 \corbox{
- \opFS\opFSa = \opFSa\opFS = \opI
- \qquad \text{\scriptsize($\opFS$ is unitary\ldots and thus also normal and isometric)}
+ \brb{\opFS\opFSa = \opFSa\opFS = \opI}
+ \qquad \brp{\begin{array}{M}
+   $\opFS$ is \propb{unitary} \ldots
+   and thus also \prope{normal} and \prope{isometric}
+ \end{array}}
  }
 \end{corollary}
 \begin{proof}
-This follows directly from the fact that $\opFSa=\opFSi$ (\prefpp{thm:opFSa}).
+This follows directly from the fact that $\opFSa=\opFSi$ \xref{thm:opFSa}.
 \end{proof}
 
 %---------------------------------------
@@ -247,9 +256,7 @@ This follows directly from the fact that $\opFSa=\opFSi$ (\prefpp{thm:opFSa}).
 \label{cor:fs_prop}
 \index{operator!unitary}  \index{unitary operator}
 %---------------------------------------
-Let $\opFS$ be the Fourier series operator,
-    $\opFSa$ be its adjoint,
-and $\opFSi$ be its inverse.
+Let $\opFS$ be the Fourier series operator with adjoint $\opFSa$ and inverse $\opFSi$.
 \corbox{\begin{array}{rcl cl D}
   \oppR(\opFS)                  &=&  \oppR(\opFSi)                   &=&    \spLLR            & \\
   %\oppN(\opFS)                  &=&  \oppN(\opFSi)                   &\eqq& \setn{0}          & \\
@@ -261,9 +268,8 @@ and $\opFSi$ be its inverse.
 \end{corollary}
 \begin{proof}
 These results follow directly from the fact that $\opFS$
-is unitary (\prefp{cor:fs_unitary}) and from
-the properties of unitary operators%
-\ifdochas{operator}{ (\prefp{thm:unitary_prop})}.
+is unitary \xref{cor:fs_unitary} and from
+the properties of unitary operators\ifsxref{operator}{thm:unitary_prop}.
 \end{proof}
 
 %=======================================
@@ -273,14 +279,11 @@ the properties of unitary operators%
 \begin{theorem}
 \label{thm:opFSc}
 %--------------------------------------
-
 \thmboxt{
   The set
   \\\indentx$\ds
     \setxZ{\fsscalei \fkerne{x}{\frac{2\pi}{\tau}n}}$
   \\
-  is an \structe{orthonormal basis} for all functions $\ff(x)$ with support in $\intcc{0}{\tau}$. 
+  is an \structe{orthonormal basis} for all functions $\ff(x)$ with support in $\intcc{0}{\tau}$.
   }
 \end{theorem}
-
-
