--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -1129,7 +1129,7 @@
   pages        = {539--586},
   }
 
-@inbook{chin2006,
+@article{chin2006,
   author       = {Tat-Jun Chin and David Suter},
   editor       = {P.J. Narayanan and Shree K. Nayar and Heung-Yeung Shum},
   title        = {A New Distance Criterion for Face Recognition Using Image Sets},
@@ -1631,7 +1631,7 @@
   url          = {http://arxiv.org/abs/0806.1294},
   }
 
-@inbook{dirichlet1829b,
+@incollection{dirichlet1829b,
   author       = {Johann Peter Gustav Lejeune Dirichlet},
   shortauthor  = {Dirichlet},
   year         = {1829},
@@ -1652,7 +1652,7 @@
   pages        = {152--174},
   }
 
-@inbook{dirichlet1837w,
+@incollection{dirichlet1837w,
   author       = {Johann Peter Gustav Lejeune Dirichlet},
   shortauthor  = {Dirichlet},
   year         = {1837},
