--- a/common/bib/mathhist.bib
+++ b/common/bib/mathhist.bib
@@ -148,11 +148,10 @@
   note         = {reprint of 1929 edition by {\em The Open Court Publishing Company}},
   }
 
-@inbook{carleson2001,
+@incollection{carleson2001,
   author       = {Lennart Axel Edvard Carleson and Bj{/:o}rn Engquist},
   editor       = {Bj\"orn Engquist and Wilfried Schmid},
   title        = {After the 'golden age': what next? Lennart Carleson interviewed by Bj\"orn Engquist},
-  shorttitle   = {After the 'golden age': what next?\ldots},
   booktitle    = {Mathematics Unlimited---2001 and beyond},
   publisher    = {Springer},
   address      = {Berlin},
@@ -332,7 +331,7 @@
   url          = {http://www.joma.org/images/upload_library/22/Ford/DesmondFearnleySander.pdf},
   }
 
-@inbook{frege1902e,
+@incollection{frege1902e,
   author       = {Gottlob Frege},
   editor       = {Jean Van Heijenoort},
   translator   = {Beverly Woodward},
@@ -411,7 +410,7 @@
   address      = {Cambridge},
   }
 
-@inbook{hawking2007fourier,
+@incollection{hawking2007fourier,
   author       = {Stephen Hawking},
   title        = {Jean Baptiste Joseph Fourier},
   year         = {2007},
@@ -662,7 +661,7 @@
   url         = {http://www.maths.tcd.ie/pub/HistMath/People/Newton/CommerciumAccount/},
   }
 
-@inbook{newton1714_hall,
+@incollection{newton1714_hall,
   author      = {Isaac Newton},
   title       = {An Account of the Book entituled 
                  \emph{Commercium Epistolicum Collinii \& aliorum, De Analysi promota}; 
