--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -1246,7 +1246,7 @@
   url          = {http://www.amazon.com/dp/B000863E7M},
   }
 
-@inbook{deWitt,
+@incollection{deWitt,
   author       = {Johan de Witt},
   title        = {Elementa curvarum linearum (Elements of Curves)},
   year         = {1659},
@@ -1303,7 +1303,7 @@
   language     = {German},
   }
 
-@inbook{smylie1973,
+@incollection{smylie1973,
   isbn         = {9780323148368},
   isbn10       = {0323148360},
   booktitle    = {Methods in Computational Physics: Advances in Research and Applications},
@@ -1465,7 +1465,7 @@
   urla         = {http://www.amazon.com/dp/0486266931},
   }
 
-@inbook{weyl1935d,
+@incollection{weyl1935d,
   title        = {Emmy Noether},
   booktitle    = {Emmy Noether 1882--1935},
   author       = {Hermann Weyl},
@@ -1479,88 +1479,6 @@
   url          = {http://link.springer.com/chapter/10.1007/978-1-4684-0535-4_6},
   }
 
-%============================================================================
-% Vibration Research papers
-% http://www.vibrationresearch.com/technical_papers.html
-%============================================================================
-@article{lang2009,
-  title        = {Does your Controller Square with Chi?},
-  author       = {George Fox Lang and Philip Van Baren},
-  journal      = {Sound \& Vibration Magazine},
-  month        = {October},
-  year         = {2009},
-  pages        = {8--16},
-  url          = {http://www.vibrationresearch.com/articles/Square_with_Chi.html},
-  }
-  
-@article{minderhoud2010,
-  title        = {Improving SRTD With Resonance Phase Settings},
-  author       = {Joel Minderhoud},
-  journal      = {Sound \& Vibration Magazine},
-  year         = {2010},
-  note         = {Dynamic Testing Reference Issue},
-  pages        = {13--15},
-  institution  = {Vibration Research Corporation},
-  address      = {Jenison, Michigan},
-  url          = {http://www.vibrationresearch.com/articles/improving_srtd.html},
-  }
-
-@article{VanBaren2012,
-  title        = {What Is Random Vibration Testing?},
-  author       = {John Van Baren},
-  authorx      = {Joel Minderhoud},
-  journal      = {Sound \& Vibration Magazine},
-  month        = {February},
-  year         = {2012},
-  pages        = {9--12},
-  volume       = {46},
-  number       = {2},
-  institution  = {Vibration Research Corporation},
-  address      = {Jenison, Michigan},
-  urlx         = {http://www.vibrationresearch.com/technical_papers.html},
-  url          = {https://www.scribd.com/document/269375244/},
-  }
-
-@article{VanBaren2004,
-  author       = {John Van Baren and Philip Van Baren},
-  title        = {Test your product using sine or random?},
-  year         = {2004},
-  journal      = {Test Engineering \& Management Magazine},
-  url          = {http://www.vibrationresearch.com/articles/sine_or_random_2004.html},
-  month        = {June/July},
-  }
-
-@article{VanBaren2012march,
-  title        = {Statistical Properties of the Random PSD},
-  author       = {Philip Van Baren},
-  institution  = {Vibration Research Corporation},
-  journal      = {Sound \& Vibration Magazine},
-  month        = {March},
-  year         = {2012},
-  url          = {http://www.vibrationresearch.com/articles/stat_chi.html},
-  }
-
-@article{minderhoud2010oct,
-  title        = {Using KurtosionR to Accelerate Structural Life Testing},
-  author       = {Joel Minderhoud and Philip Van Baren},
-  institution  = {Vibration Research Corporation},
-  address      = {Jenison, Michigan},
-  journal      = {Sound \& Vibration Magazine},
-  year         = {2010},
-  month        = {October},
-  url          = {https://www.vibrationresearch.com/articles/using_kurtosion.html},
-  }
-
-@article{VanBaren2009,
-  title        = {The Fatigue Damage Spectrum and Kurtosis Control},
-  author       = {John Van Baren and Philip Van Baren},
-  institution  = {Vibration Research Corporation},
-  address      = {Jenison, Michigan},
-  year         = {2009},
-  month        = {December},
-  url          = {https://www.vibrationresearch.com/articles/fatigue_kurtosis.html},
-  }
-  
 @article{yates1963,
   title        = {Ronald Aylmer Fisher, 1890--1962},
   journal      = {Biographical Memoirs of Fellows of the Royal Society of London},
