--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -3,7 +3,8 @@
 % Daniel J. Greenhoe
 %============================================================================
 %======================================
-\chapter{Operations on Sequences}
+%\chapter{Operations on Sequences}
+\chapter{Z Transform}
 \label{app:dsp}
 \label{app:ztrans}
 %======================================
