--- a/common/operator.tex
+++ b/common/operator.tex
@@ -1782,19 +1782,19 @@ Let $\spH$ be a \structe{Hilbert space} and $\opP$ an operator in $\clOhh$
 with adjoint $\opPa$, \structe{null space} $\oppN(\opP)$, and \structe{image set} $\oppI(\opP)$.%
 \thmbox{\begin{array}{>{\quad}F rcl CDc}
   \mc{7}{M}{If $\opP$ is a \structe{projection operator}, then the following are equivalent:}\\
-  \cnto & \opPa     &=& \opP
+    1.  & \opPa     &=& \opP
         &
         &($\opP$ is \prope{self-adjoint})
         & \iff
-  \cntn & \opPa\opP &=& \opP\opPa
+  \\2.  & \opPa\opP &=& \opP\opPa
         &
         &($\opP$ is \prope{normal})
         & \iff
-  \cntn & \oppI(\opP) &=& \oppN(\opP)^\perp
+  \\3.  & \oppI(\opP) &=& \oppN(\opP)^\perp
         &
         &
         & \iff
-  \cntn & \inprod{\opP\vx}{\vx} &=& \norm{\opP\vx}^2
+  \\4.  & \inprod{\opP\vx}{\vx} &=& \norm{\opP\vx}^2
         & \forall \vx\in\setX
         &
         &
