more inbook ==> incollection

--- a/common/bib/algebra.bib
+++ b/common/bib/algebra.bib
@@ -4,9 +4,6 @@
 % BibTeX input file
 % Algebra references
 %============================================================================
-
-
-
 @book{adhikari2003,
   title        = {Groups, Rings And Modules With Applications},
   author       = {M.R. Adhikari and A. Adhikari},
@@ -707,7 +704,7 @@
   publisher    = {Department of Mathematics, University of Houston},
   }
 
-@inbook{taylor2008,
+@incollection{taylor2008,
   author       = {Walter Taylor},
   title        = {Equational Logic},
   booktitle    = {Universal Algebra},
