--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -2394,13 +2394,13 @@
   urla         = {http://www.amazon.com/dp/1441915451},
   } 
 
-@inbook{gao2011h,
+@incollection{gao2011h,
   author       = {Robert X. Gao and Ruqiang Yan},
-  chapter      = {2. From Fourier Transform to Wavelet Transform: A Historical Perspective},
-  title        = {Wavelets: Theory and Applications for Manufacturing},
+  title        = {From Fourier Transform to Wavelet Transform: A Historical Perspective},
+  booktitle    = {Wavelets: Theory and Applications for Manufacturing},
   year         = {2011},
   publisher    = {Springer Science + Business Media},
-  pages        = {17-32},
+  pages        = {17--32},
   doi          = {10.1007/978-1-4419-1545-0},
   isbn         = {9781441915450},
   isbn10       = {1441915451},
@@ -2454,7 +2454,7 @@
   pages        = {197--217},
   }
 
-@inbook{gelfand1943r,
+@incollection{gelfand1943r,
   author       = {Israel M. Gelfand and Mark A. Neumark},
   title        = {On the imbedding of normed rings into the ring of operators in Hilbert Space},
   shorttitle   = {On the imbedding of normed rings into the ring of operators\ldots},
@@ -2462,8 +2462,8 @@
   booktitle    = {C*-algebras: 1943--1993: a Fifty Year Celebration: Ams Special Session Commenorating the First Fifty Years of C*-Algebra Theory January 13--14, 1993},
   shortbooktitle= {C*-algebras: 1943--1993: a Fifty Year Celebration},
   editor       = {Robert S. Doran},
-  isbn         = {0821851756},
-  isbn13       = {978-0821851753},
+  isbn10       = {0821851756},
+  isbn         = {978-0821851753},
   pages        = {3--19},
   url          = {http://books.google.com/books?vid=ISBN0821851756},
   urlw         = {http://www.worldcat.org/isbn/0821851756},
@@ -2495,7 +2495,7 @@
   pages        = {384},
   }
 
-@inbook{gelfand1964,
+@incollection{gelfand1964,
   author       = {Israel M. Gelfand and Mark A. Naimark},
   title        = {Normed Rings with an Involution and their Representations},
   pages        = {240--274},
@@ -2506,6 +2506,8 @@
   oclc         = {1220445},
   isbn10       = {0821820222},
   isbn         = {9780821820223},
+  number       = {170},
+  series       = {AMS Chelsea Publishing Series},
   language     = {English},
   url          = {http://books.google.com/books?vid=ISBN0821820222},
   urlw         = {http://www.worldcat.org/oclc/1220445},
@@ -3553,7 +3555,7 @@
   year         = {1988},
   }
 
-@inbook{jimenez2006,
+@incollection{jimenez2006,
   author       = {R. Jim/'enez and J. E. Yukich},
   title        = {Statistical distances based on Euclidean graphs},
   booktitle    = {Recent Advances in Applied Probability},
@@ -4062,11 +4064,11 @@
   url          = {http://www.emis.de/cgi-bin/JFM-item?33.0307.02},
   }
 
-@inbook{lebesgue1902b,
+@incollection{lebesgue1902b,
   author       = {Henri Lebesgue},
-  chapter      = {Int/'egrale, Longueur, Aire},
+  title        = {Int/'egrale, Longueur, Aire},
   series       = {{\OE}uvres scientifiques de Henri Lebesgue},
-  title        = {Introduction, Int/'egration et d/'erivation},
+  booktitle    = {Introduction, Int/'egration et d/'erivation},
   publisher    = {L'Enseignement Math/'ematique, Institut de math/'ematiques, Universit/'e Gen/`eve},
   address      = {Gen/`eve, Switzerland},
   volume       = {1},
@@ -5676,7 +5678,7 @@
   urla         = {http://www.amazon.com/dp/1107007313},
   }
 
-@inbook{smyth1992,
+@incollection{smyth1992,
   author       = {M. Smyth},
   title        = {Topology},
   booktitle    = {Handbook of Logic in Computer Science: Volume 1: Background: Mathematical Structures},
@@ -5970,14 +5972,14 @@
   series       = {Wadsworth math series},
   }
   
-@inbook{stromberg1982r,
+@incollection{stromberg1982r,
   author       = {Jan-Olov Str/:omberg},
-  chapter      = {A modified Franklin system and higher order splines as unconditional basis for Hardy spaces},
+  title        = {A modified Franklin system and higher order splines as unconditional basis for Hardy spaces},
   year         = {1982},
   volume       = {II},
   pages        = {197--215},
   editor       = {Christopher Heil and David F. Walnut},
-  title        = {Fundamental Papers in Wavelet Theory},
+  booktitle    = {Fundamental Papers in Wavelet Theory},
   year         = {1982},
   publisher    = {Princeton University Press},
   isbn13       = {9781400827268},
@@ -6516,7 +6518,7 @@
   language     = {English},
   }
 
-@inbook{widom1965,
+@incollection{widom1965,
   title        = {Toeplitz Matrices},
   author       = {Harold Widom},
   year         = {1965},
