--- a/common/bib/found.bib
+++ b/common/bib/found.bib
@@ -4,7 +4,6 @@
 % BibTeX input file
 % foundational mathematics
 %============================================================================
-
 @article{alsina1980,
   author       = {Claudi Alsina and Enric Trillas and Laura Valverde},
   title        = {On non-distributive logical connectives for fuzzy sets},
@@ -2912,25 +2911,25 @@
 
 @misc{zhu1303,
   author       = {Sh{/`i} Ji{/'e} Zh{/=u}},
-  title        = {Jade Mirror of the Four Unknowns (Chinese: \zht{四元玉鑑}, pinyin: S/`i Y/'uan Y/`u Ji/`an)},
-  titlex       = {Precious Book of Four Unknowns (\zhtzy{四元玉鑑})},
-  notex        = {author: {\fntzhtzy 朱世傑} (Zh{/=u} Sh{/`i} Ji{/'e}), many thanks to Po-Ning Chen for help with translation of the book title (2012 September 12)},
-  notex        = {author: \zht{朱世傑} (pinyin: Zh{/=u} Sh{/`i} Ji{/'e});
-                  Many many thanks to Po-Ning Chen (Chinese: \zht{陳伯寧}, pinyin: Ch/'en B/'o Ni/'ng) for his consultation with regards to the translation of the book title:
-                  ``\zht{鑑} means book in ancient Chinese. 
-                  For example, \zht{資治通鑑} is a famous history book. 
+  title        = {Jade Mirror of the Four Unknowns (Chinese: \zht{????}, pinyin: S/`i Y/'uan Y/`u Ji/`an)},
+  titlex       = {Precious Book of Four Unknowns (\zhtzy{????})},
+  notex        = {author: {\fntzhtzy ???} (Zh{/=u} Sh{/`i} Ji{/'e}), many thanks to Po-Ning Chen for help with translation of the book title (2012 September 12)},
+  notex        = {author: \zht{???} (pinyin: Zh{/=u} Sh{/`i} Ji{/'e});
+                  Many many thanks to Po-Ning Chen (Chinese: \zht{???}, pinyin: Ch/'en B/'o Ni/'ng) for his consultation with regards to the translation of the book title:
+                  ``\zht{?} means book in ancient Chinese. 
+                  For example, \zht{????} is a famous history book. 
                   Usually, it means a book with serious subject. 
-                  \zht{玉} is a precious stone in Chinese, which can be translated as Jade.
+                  \zht{?} is a precious stone in Chinese, which can be translated as Jade.
                   So I guess 
                   The Jade Mirror of Four Unknowns
-                  is a good translation because 'Mirror' means a 'faithful recording/book of something.'"---Po-Ning Chen \zht{陳伯寧}, 2012 September 12)},
-  note         = {author: \zht{朱世傑} (pinyin: Zh{/=u} Sh{/`i} Ji{/'e});
-                  Many many thanks to Po-Ning Chen (Chinese: \zht{陳伯寧}, pinyin: Ch/'en B/'o Ni/'ng) for his consultation with regards to the translation of the book title:
-                  ``Originally, '\zht{鑑}' is a basin or container made by metals. 
+                  is a good translation because 'Mirror' means a 'faithful recording/book of something.'"---Po-Ning Chen \zht{???}, 2012 September 12)},
+  note         = {author: \zht{???} (pinyin: Zh{/=u} Sh{/`i} Ji{/'e});
+                  Many many thanks to Po-Ning Chen (Chinese: \zht{???}, pinyin: Ch/'en B/'o Ni/'ng) for his consultation with regards to the translation of the book title:
+                  ``Originally, '\zht{?}' is a basin or container made by metals. 
                   It can then be used as a mirror after pouring water into it, 
                   and hence is extended to indicate a book that reflects faithfully about a subject. 
-                  '\zht{玉}' is a precious stone and hence can be translated as Jade. 
-                  The combination of the two characters is therefore translated as 'The Jade Mirror'."---Po-Ning Chen (\zht{陳伯寧}), 2012 September 12)},
+                  '\zht{?}' is a precious stone and hence can be translated as Jade. 
+                  The combination of the two characters is therefore translated as 'The Jade Mirror'."---Po-Ning Chen (\zht{???}), 2012 September 12)},
   year         = {1303},
   isbn10       = {7-5382-6923-1},
   isbn         = {9787538269239},
