--- a/common/bib/wavelets.bib
+++ b/common/bib/wavelets.bib
@@ -46,7 +46,7 @@
   urla         = {http://www.amazon.com/dp/0134896009},
   }
 
-@inbook{casazza1998,
+@incollection{casazza1998,
   author       = {Peter G. Casazza and Mark C. Lammers},
   title        = {Bracket Products for Weyl-Heisenberg Frames},
   series       = {Applied and Numerical Harmonic Analysis},
@@ -302,7 +302,7 @@
   urls         = {http://www.springerlink.com/content/v1n8787g737j5k64/},
   }
 
-@inbook{haar1910e,
+@incollection{haar1910e,
   author       = {Alfr/'ed Haar},
   editor       = {Christopher Heil and David F. Walnut},
   title        = {On the theory of orthogonal function systems},
@@ -737,7 +737,7 @@
   urla         = {http://www.amazon.com/dp/1584882271},
   }
 
-@inbook{walter1999,
+@incollection{walter1999,
   author       = {Gilbert G. Walter and XiaoPing Shen},
   title        = {A substitute for summability in wavelet expansions},
   year         = {1999},
@@ -785,7 +785,7 @@
   isbn         = {9780521578943},
   }  
   
-@inbook{zayed2004,
+@incollection{zayed2004,
   editor       = {John Benedetto and Ahmed I. Zayed},
   title        = {A Prelude to Sampling, Wavelets, and Tomography},
   booktitle    = {Sampling, Wavelets, and Tomography},
