--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -146,7 +146,7 @@
   address      = {New York and London},
   }
 
-@inbook{bengal2008,
+@incollection{bengal2008,
   isbn         = {9780470018613},
   isbn10       = {0470018615},
   author       = {Irad Ben-Gal},
@@ -782,7 +782,7 @@
   year         = {2019},
   }
 
-@inbook{haykin1979,
+@incollection{haykin1979,
   editor       = {S. Haykin},
   booktitle    = {Nonlinear Methods of Spectral Analysis},
   series       = {Topics in Applied Physics},
@@ -795,7 +795,7 @@
   author       = {S. Haykin and S. Kesler},
   }
 
-@inbook{haykin1983,
+@incollection{haykin1983,
   editor       = {S. Haykin},
   booktitle    = {Nonlinear Methods of Spectral Analysis},
   series       = {Topics in Applied Physics},
